(HDS-1872) this-is-hds page is visible and styles are fixed

--- a/site/src/docs/about/this-is-hds/styles.scss
+++ b/site/src/docs/about/this-is-hds/styles.scss
@@ -13,6 +13,7 @@
 }
 
 .info-page-hero-logo {
+  height: unset;
   margin-left: 0;
   width: 100px;
 
